--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+Project-Documentation/mdm/Project-Documentation/mdm/transportation-mdm/511_API_GTFS/licenses
+
 TomTom\ Base\ Map/large_files"
 
 github suggested boilerplate:
