--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 Project-Documentation/mdm/transportation-mdm/scripts/511_API_GTFS/creds
-Project-Documentation/mdm/transportation-mdm/scripts/511_API_GTFS/GTFS_outputs
+Project-Documentation/mdm/transportation-mdm/scripts/511_API_GTFS/**/*.csv
 
 TomTom\ Base\ Map/large_files"
 
